English: Removed redundant and unused lines of code.
Español:
Eliminé lineas de código redundantes e inutilizadas.

--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,27 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>com.jovaniel</groupId>
     <artifactId>AccountManager</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
+    <packaging>jar</packaging>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>com.jova.Main</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -31,6 +49,15 @@
             <artifactId>aes-everywhere-java</artifactId>
             <version>1.2.7</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.lasantae</groupId>
+            <artifactId>passgen-generator</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/Dependency/password-generator-module-1.0.jar</systemPath>
+        </dependency>
+
     </dependencies>
 
 </project>
