--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>com.jova.Main</mainClass>
+                            <mainClass>com.jovaniel.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
